--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Elevare Studio</title>
+    <link rel="icon" href="static/logotipo.jpg">
+    <script src="https://kit.fontawesome.com/95069ca1ac.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
